# roost

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DESIGN.md  DISCLAIMER.md  FEATURE_SUGGESTIONS.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.bat  start.sh
backend/: config.py  main.py
backend/api/: alerts.py  devices.py  diagnostics.py  groups.py  reports.py  router.py  schedules.py  system.py  threats.py  usage.py
backend/database/: engine.py  migrations.py
backend/database/models/: __init__.py  alert.py  device.py  group.py  schedule.py  threat.py  usage.py
backend/services/: arp_scanner.py  arp_spoofer.py  bandwidth_limiter.py  device_classifier.py  network_info.py  oui_resolver.py  packet_capture.py  scheduler_service.py  threat_service.py
backend/tasks/: blocklist_updater.py  scan_task.py  usage_aggregator.py
backend/utils/: admin_check.py  ip_utils.py  logger.py  mac_utils.py
backend/websocket/: events.py  manager.py  router.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  devices.ts  schedules.ts  system.ts  usage.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: Alerts.tsx  Dashboard.tsx  Devices.tsx  Groups.tsx  Reports.tsx  Schedules.tsx  (+3 more)
tests/: conftest.py
tests/e2e/: full_suite.py  phase0_smoke.py  phase1_device_discovery.py  phase2_block_unblock.py  phase3_charts.py  phase4_advanced.py
tests/unit/: test_core.py
(+21 files in other folders)
